- 基础框架搭建

--- a/webroot/css/admin.css
+++ b/webroot/css/admin.css
@@ -300,4 +300,8 @@ a:focus {
 .checkbox-primary.inline-block {
   display: inline-block;
 }
+.table td,
+.table th {
+  vertical-align: middle;
+}
 /*# sourceMappingURL=admin.css.map */
