--- a/webroot/css/admin.less
+++ b/webroot/css/admin.less
@@ -354,3 +354,7 @@ a, a:hover, a:link, a:visited,a:focus {
     display: inline-block;
   }
 }
+
+.table td, .table th {
+  vertical-align: middle;
+}
