--- a/webroot/css/admin.less
+++ b/webroot/css/admin.less
@@ -197,8 +197,10 @@ a, a:hover, a:link, a:visited,a:focus {
       left: 0;
       right: 0;
       height: @top-height;
-      background: #EDEDED;
-      border-bottom: 1px solid #D9DEE4;
+      background: #fff;
+      border-bottom: 1px solid #d8dce5;
+      -webkit-box-shadow: 0 1px 3px 0 rgba(0,0,0,.12), 0 0 3px 0 rgba(0,0,0,.04);
+      box-shadow: 0 1px 3px 0 rgba(0,0,0,.12), 0 0 3px 0 rgba(0,0,0,.04);
 
       .breadcrumb {
         margin: 0;
