- 框架基础搭建

--- a/webroot/css/admin.less
+++ b/webroot/css/admin.less
@@ -104,6 +104,21 @@ a, a:hover, a:link, a:visited,a:focus {
   }
 }
 
+.single-upload {
+  .file-list-grid {
+    .file-wrapper>.actions {
+      width: 100%;
+    }
+    .file {
+      width: 90%;
+      margin-bottom: 5px;
+      .file-icon {
+        width: 100%;
+      }
+    }
+  }
+}
+
 .zad_container_main {
   min-height: 100%;
   .zad_container_left {
