--- a/webroot/css/website/website.less
+++ b/webroot/css/website/website.less
@@ -25,6 +25,9 @@ a, a:hover, a:link, a:visited,a:focus {
 .text-white {
   color: #fff;
 }
+.text-blue {
+  color: @color-blue;
+}
 // 文字省略
 .ellipsis {
   .ellipsis();
